[gd_scene load_steps=2 format=3 uid="uid://rw5ec1cqiwvk"]

[ext_resource type="Script" path="res://hud.gd" id="1_lfbkd"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_lfbkd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="LabelHealth" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="LabelGold" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="LabelResources" type="Label" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Resources allow the purchase of upgrades"
mouse_filter = 0
theme_override_font_sizes/font_size = 32
